feat(terms-of-use): add Terms of Use dialog and integrate into login flow

--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -72,6 +72,10 @@
         </mat-card-content>
       </mat-card>
     </div>
+
+    <div class="terms-of-use-notice">
+      <p>By using Nostria, you agree to our <a href="#" (click)="$event.preventDefault(); openTermsOfUse()">Terms of Use</a>.</p>
+    </div>
   </div>
   }
 
