--- a/src/app/pages/media/media.component.html
+++ b/src/app/pages/media/media.component.html
@@ -212,7 +212,7 @@
               <!-- Uploaded Column -->
               <ng-container matColumnDef="uploaded">
                 <th mat-header-cell *matHeaderCellDef>Uploaded</th>
-                <td mat-cell *matCellDef="let item">{{ item.created_at | date:'short' }}</td>
+                <td mat-cell *matCellDef="let item">{{ item.uploaded | date:'medium' }}</td>
               </ng-container>
 
               <!-- Actions Column -->
